Iteration 2: PostgreSQL persistence, TimescaleDB, Docker Compose