@@ -2,32 +2,38 @@ package com.clusterpulse.backend.service;
 
 import com.clusterpulse.backend.model.NodeMetrics;
 import com.clusterpulse.backend.model.NodeWindow;
+import com.clusterpulse.backend.repository.NodeMetricsRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayDeque;
 import java.util.Collections;
-import java.util.Deque;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
+import java.util.stream.Collectors;
 
 @Service
 public class MetricsService {
 
     private static final int WINDOW_SIZE = 100;
 
-    // Map: nodeId -> sliding window of metrics with its own lock
+    private final NodeMetricsRepository nodeMetricsRepository;
+
+    // In-memory cache: nodeId -> sliding window of latest metrics (fast path for single-node latest)
     private final ConcurrentMap<String, NodeWindow> metricsStore = new ConcurrentHashMap<>();
 
+    public MetricsService(NodeMetricsRepository nodeMetricsRepository) {
+        this.nodeMetricsRepository = nodeMetricsRepository;
+    }
+
     /**
-     * Adds a new NodeMetrics instance for the given node, maintaining a maximum window size.
+     * Adds a new NodeMetrics instance: writes to both in-memory cache and database.
      */
     public void addMetrics(NodeMetrics m) {
-        // Atomically get or create the window for this nodeId and update it under its own lock.
+        // Update in-memory cache
         NodeWindow window = metricsStore.computeIfAbsent(
-                m.nodeId(),
+                m.getNodeId(),
                 k -> new NodeWindow(new ArrayDeque<>(WINDOW_SIZE))
         );
 
@@ -40,10 +46,13 @@ public class MetricsService {
         } finally {
             window.getLock().unlock();
         }
+
+        // Persist to database (same entity may get id assigned after save)
+        nodeMetricsRepository.save(m);
     }
 
     /**
-     * Returns the latest NodeMetrics for the specified node ID, or null if none are available.
+     * Returns the latest NodeMetrics for the specified node ID from the cache, or null if none.
      */
     public NodeMetrics getLatestMetrics(String nodeId) {
         NodeWindow window = metricsStore.get(nodeId);
@@ -58,41 +67,18 @@ public class MetricsService {
     }
 
     /**
-     * Returns a map of nodeId -> latest NodeMetrics for all nodes. (If window is empty for a node, excludes it.)
+     * Returns a map of nodeId -> latest NodeMetrics for all nodes, from the database.
      */
     public Map<String, NodeMetrics> getAllLatestMetrics() {
-        Map<String, NodeMetrics> latestMap = new HashMap<>();
-
-        for (Map.Entry<String, NodeWindow> entry : metricsStore.entrySet()) {
-            NodeWindow window = entry.getValue();
-
-            window.getLock().lock();
-            try {
-                NodeMetrics latest = window.getDeque().peekLast();
-                if (latest != null) {
-                    latestMap.put(entry.getKey(), latest);
-                }
-            } finally {
-                window.getLock().unlock();
-            }
-        }
-
-        return latestMap;
+        return nodeMetricsRepository.findLatestMetricPerNode().stream()
+                .collect(Collectors.toMap(NodeMetrics::getNodeId, nm -> nm, (a, b) -> a));
     }
 
     /**
-     * Returns an immutable list of the sliding window of metrics for the specified nodeId,
-     * or an empty list if the node has no metrics yet.
+     * Returns the last 100 metrics for the given node, newest first, from the database.
      */
     public List<NodeMetrics> getMetricsWindow(String nodeId) {
-        NodeWindow window = metricsStore.get(nodeId);
-        if (window == null) return Collections.emptyList();
-
-        window.getLock().lock();
-        try {
-            return List.copyOf(window.getDeque());
-        } finally {
-            window.getLock().unlock();
-        }
+        List<NodeMetrics> list = nodeMetricsRepository.findTop100ByNodeIdOrderByTimestampDesc(nodeId);
+        return list != null ? list : Collections.emptyList();
     }
 }
